--- a/IDEA-maven/001-maven-parent/pom.xml
+++ b/IDEA-maven/001-maven-parent/pom.xml
@@ -49,6 +49,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <dependencies>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
