--- a/maven-parent/maven-java-001/maven-java-0101/pom.xml
+++ b/maven-parent/maven-java-001/maven-java-0101/pom.xml
@@ -10,5 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>maven-java-0101</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
